# GNSS-ROS

./: .gitmodules  README.md
data/: corrected_path.txt  corrected_path.yaml  corrected_path_half.txt  fix.txt  fix_downsampled.txt  fix_half.txt  fix_half_downsampled.txt  gps_map.html  original_path.txt  original_path.yaml  original_path_half.txt
scripts/: plot_gnss_bag.py
spark_gnss_ros/: CMakeLists.txt  package.xml
spark_gnss_ros/config/: zed_f9p.yaml
spark_gnss_ros/launch/: ublox_gps_ntrip.launch.py  ublox_gps_ntrips.launch.py
spark_gnss_ros/spark_gnss_ros/: fix_to_kitti.py  path_to_kitti.py  plot_gnss_bag.py
